--- a/report.tex
+++ b/report.tex
@@ -57,6 +57,14 @@ urlcolor  = blue]{hyperref}
 \vspace{-2cm}
 \thispagestyle{fancy}
 
+\begin{flushright}
+20243265 Doha Nam \\
+20180598 Seongwon Jeong \\
+20190528 Hyeonsoo Lee \\
+20200631 Minho Cha \\
+\href{https://github.com/waroad/Auto_refactoring-differential_testing}{GitHub Link}
+\end{flushright}
+
 \section{Introduction}
 Python is widely used across various domains due to its rich libraries and flexible syntax. However, many developers struggle with writing \textbf{idiomatic} Python code, which can compromise readability, make maintenance more challenging, and sometimes even degrade performance. To address these issues, we have developed an \textbf{automated refactoring} technology. This technology transforms Python code into more \textbf{Pythonic} code, enhancing both readability and performance. To verify that the refactoring does not alter the functionality of the code, we have implemented \textbf{differential testing}. This method confirms that the code behaves the same before and after refactoring, thus securing the stability of the refactoring process. This report will discuss the necessity and effectiveness of this approach and examine how automated refactoring can improve the quality of Python code.
 
